[gd_scene load_steps=6 format=3 uid="uid://dsce4j04uulo7"]

[ext_resource type="Script" uid="uid://by7woiwt4gd7w" path="res://scenes/enemies/pelicant/pelicanbullet.gd" id="1_530bf"]
[ext_resource type="Texture2D" uid="uid://dakf53ikqp0tr" path="res://assets/sprites/enemy/pelican/pelican_bullet.png" id="2_530bf"]
[ext_resource type="Script" uid="uid://dbbfdchjn8157" path="res://scripts/hit_area_2d.gd" id="3_fiarj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cmonk"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_3b0h3"]
radius = 5.0

[node name="Pelicanbullet" type="RigidBody2D"]
script = ExtResource("1_530bf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_530bf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_cmonk")

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_fiarj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_3b0h3")

[connection signal="area_entered" from="HitArea2D" to="." method="_on_hit_area_2d_area_entered"]
[connection signal="body_entered" from="HitArea2D" to="." method="_on_hit_area_2d_body_entered"]
[connection signal="hitted" from="HitArea2D" to="." method="_on_hit_area_2d_hitted"]
